# camera-cuda

./: BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  opencv.BUILD
bazel/: basic_helper.bzl  cl.BUILD  compile_option.bzl  cpplint.BUILD  directxtex.BUILD  directxtex.patch  directxtk12.patch  fmt.BUILD  imgui.BUILD  jsoncpp.BUILD  level_zero.BUILD  linux_ze_loader.BUILD  local_archive.bzl  msvc_helper.bzl  spdlog.BUILD  symlink.bzl  ze_loader.BUILD
bazel/check/: cpplint.bzl
bazel/compute_sdk/: cl_compiler.bzl.tpl  cm_compiler.bzl.tpl  csdk_configure.bzl
bazel/hlsl/: compiler.bzl.tpl  hlsl_configure.bzl
bazel/openvino/: BUILD.bazel  README.md  bazel_nn_converter.py  kernel_dump.patch  model_conversion.bzl  openvino_2022_win32.BUILD  openvino_intel_gpu_plugin_dump.BUILD  openvino_vpu_static_win32.BUILD
bazel/openvino/include/hack/: file_handle.hpp  hack.hpp
bazel/toolchains/: BUILD.tpl  bullseye_cc_configure.bzl
bazel/wdk/: BUILD.tpl  rc.bzl.tpl  wdk_configure.bzl  wpp.bzl.tpl
calculators/cuda/edge/: BUILD.bazel  imedge.cu  imedge.h
calculators/cuda/hdr/: BUILD.bazel  HDRPipeline.cpp  HDRPipeline.h  color.cuh  hdr_pipeline.cu  main.cpp
calculators/cuda/hdr/framework/: BUILD.bazel  cmd_args.cpp  cmd_args.h  color.h  image.h  io.h  pfm.cpp  pfm.h  png.cpp  png.h  rgb32f.h  rgba32f.h  rgba8.h
calculators/cuda/hdr/framework/CUDA/: BUILD.bazel  error.cpp  error.h
calculators/cuda/resize/: BUILD.bazel  imresize.cu  imresize.h  main.cpp
calculators/cuda/rotater/: imflip.h
calculators/cuda/scaler/: BUILD.bazel  imscale.cu  imscale.h  main.cpp
calculators/dx11/: BUILD.bazel
calculators/opencv/: BUILD.bazel  read_image.cpp
calculators/zero/: BUILD.bazel
cmake/toolchain/: BUILD.bazel
cpp_demo/: BUILD
cuda/: BUILD.bazel
cuda/private/: cuda_helper.bzl  defs.bzl  repositories.bzl
cuda/private/templates/: BUILD.cudart  BUILD.local_cuda_shared  BUILD.local_toolchain_clang  BUILD.local_toolchain_disabled  BUILD.local_toolchain_nvcc  BUILD.local_toolchain_nvcc_msvc
cuda_demo/: BUILD.bazel
data/cud_test/: cov.txt  cud_denoise_1632x920.raw  mu.txt
data/dol_test/001/inputs/: long_image.ATEImage  short_image.ATEImage
data/dol_test/001/pipe/: DOL_lite_1_0#1.ate  DOL_lite_1_0.ate  DOL_lite_1_0.iqc
data/dol_test/003/pipe/: DOL_lite_1_0#2.ate  DOL_lite_1_0#3.ate  DOL_lite_1_0#4.ate  DOL_lite_1_0#5.ate  DOL_lite_1_0.ate  DOL_lite_1_0.iqc
data/dol_test/004/pipe/: DOL_lite_1_0#1.ate  DOL_lite_1_0.iqc
data/dol_test/gtm/inputs/: input_image.nv12
data/dol_test/gtm/pipe/: ateDebug.iqc  ateDebug_v2.ate  ateDebug_v2~IPU6EPFull#1.ate  ateDebug_v2~IPU6EPFull#2.ate  ateDebug_v2~IPU6EPFull#3.ate  ateDebug_v2~IPU6EPFull#4.ate  ateDebug_v2~IPU6EPFull#5.ate
data/image/: four_people_640x360.nv12  house_320x240.nv12  house_320x240.rgb  ori_2M.nv12
examples/: .bazelrc  MODULE.bazel  WORKSPACE
examples/edge/: main.cpp
examples/rotater/: BUILD.bazel  imflip.cu  main.cpp
