# MIT License

# Copyright (c) 2024 Cui, Xin

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.


load("@rules_foreign_cc//toolchains/native_tools:native_tools_toolchain.bzl", "native_tool_toolchain")

native_tool_toolchain(
    name = "cmake_win32",
    path = "$(location @cmake_win32//:cmake)",
    target = "@cmake_win32//:cmake",
)

native_tool_toolchain(
    name = "cmake_default",
    path = "$(location @cmake_default//:cmake)",
    target = "@cmake_default//:cmake",
)

native_tool_toolchain(
    name = "ninja_win32",
    path = "$(location @ninja_win32//:ninja)",
    target = "@ninja_win32//:ninja",
)

native_tool_toolchain(
    name = "ninja_default",
    path = "$(location @ninja_default//:bin)",
    target = "@ninja_default//:bin",
)

toolchain(
    name = "repo_deps_cmake_win32_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = ":cmake_win32",
    toolchain_type = "@rules_foreign_cc//toolchains:cmake_toolchain",
)

toolchain(
    name = "repo_deps_ninja_win32_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    toolchain = ":ninja_win32",
    toolchain_type = "@rules_foreign_cc//toolchains:ninja_toolchain",
)

toolchain(
    name = "repo_deps_cmake_toolchain",
    exec_compatible_with = ["@platforms//cpu:x86_64"],
    toolchain = ":cmake_default",
    toolchain_type = "@rules_foreign_cc//toolchains:cmake_toolchain",
)

toolchain(
    name = "repo_deps_ninja_toolchain",
    exec_compatible_with = ["@platforms//cpu:x86_64"],
    toolchain = ":ninja_default",
    toolchain_type = "@rules_foreign_cc//toolchains:ninja_toolchain",
)
